--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/lodash": "^4.14.173",
+    "@types/uuid": "^8.3.1",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
