--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.173",
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
-    "@types/lodash": "^4.14.173",
     "@types/uuid": "^8.3.1",
     "classnames": "^2.3.1",
+    "firebase": "^9.2.0",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
