--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "classnames": "^2.3.1",
     "firebase": "^9.2.0",
     "lodash": "^4.17.21",
+    "ngraph.graph": "^19.1.0",
+    "ngraph.path": "^1.3.1",
     "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
@@ -24,7 +26,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "socket.io-client": "^4.2.0",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
