--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "lodash": "^4.17.21",
     "ngraph.graph": "^19.1.0",
     "ngraph.path": "^1.3.1",
-    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +26,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "sass": "^1.57.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
