--- a/package.json
+++ b/package.json
@@ -1,50 +1,34 @@
 {
-  "name": "react-quick-start",
+  "name": "quoridor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.173",
-    "@types/node": "^12.20.19",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.1",
-    "@types/uuid": "^8.3.1",
-    "classnames": "^2.3.1",
-    "firebase": "^9.2.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@vitejs/plugin-react-swc": "^3.0.1",
+    "classnames": "^2.3.2",
+    "firebase": "^9.15.0",
     "lodash": "^4.17.21",
-    "ngraph.graph": "^19.1.0",
-    "ngraph.path": "^1.3.1",
-    "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.0",
+    "ngraph.graph": "^20.0.1",
+    "ngraph.path": "^1.4.0",
+    "prettier": "^2.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.5%",
       "not dead",
       "not op_mini all"
     ],
@@ -59,8 +43,8 @@
     "printWidth": 120
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.173",
-    "@types/react-router-dom": "^5.3.1",
-    "@types/uuid": "^8.3.1"
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0"
   }
 }
