--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-toastify": "^9.1.1",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-tsconfig-paths": "^4.0.3"
   },
   "scripts": {
     "start": "vite",
