resolve css imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
       "@redux": ["./src/redux/index.ts"],
       "@constants": ["./src/constants/index.ts"],
       "@utils": ["./src/utils/index.ts"],
-      "@hooks": ["./src/hooks/index.ts"]
+      "@hooks": ["./src/hooks/index.ts"],
+      "@gifs/*": ["./src/assets/images/gif/*"],
+      "@styles/*": ["./src/css/*"]
     }
   },
   "include": ["src"]
